--- a/css/css.css
+++ b/css/css.css
@@ -145,9 +145,9 @@ footer {
     position: relative;
 }
 
-.footer .order-list {
+/*.footer .order-list {
     opacity: 0;
-}
+}*/
 
 .animation-moveRight {
     animation: moveRight 1s ease-in-out;
@@ -891,6 +891,18 @@ select::-ms-expand {
     background-color: #ffffff;
 }
 
+.comment .container {
+    max-width: 1100px;
+}
+
+.comment-title {
+    font-family: 'RobotoCondensed Bold';
+    font-size: 73px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
 .map-block {
     padding: 80px 0 20px;
 }
@@ -905,16 +917,9 @@ select::-ms-expand {
     height: auto;
 }
 
-.comment .container {
-    max-width: 1100px;
-}
-
-.comment-title {
-    font-family: 'RobotoCondensed Bold';
-    font-size: 73px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 50px;
+.set-qwestion {
+    padding: 80px 0 70px;
+    /*background: url(../img/spec-bg.png) no-repeat center;*/
 }
 
 .slider {
